# everyday

./: .gitattributes  .gitignore  CONTEXT.md  Cargo.toml  Justfile  PRD.md  README.md  README_ZH.md  agents.md  config.example.toml  everyday-conventions.md  findings.md  governance.md  progress.md  task_plan.md
.github/workflows/: ci.yml  release.yml
.rules/: 01-workflow.md  02-coding-style.md  03-testing.md  04-security.md  05-commit.md  06-justfile.md  07-dependency-pitfalls.md  08-comments.md  RULES.md
docs/adr/: 0001-append-only-event-log.md  0002-calendar-window-refresh.md  0003-account-first-class-column.md  0004-timeline-provider-pull-only.md  0005-no-auto-sync.md  0006-utc-storage-local-query.md  0007-notion-ops-log.md  0008-local-provider-degraded-granularity.md  0009-best-effort-sync.md  0010-mail-imap-connection-pool.md  0011-mail-cache-envelope-storage.md  0012-mail-uid-watermark-incremental-sync.md  0013-mail-staleness-flags-snapshot.md  B001-bookmark-dual-provider.md  C001-caldav-stack.md  C002-full-pull-local-filter.md  C003-cal-provider-window-filter.md  F001-cli-shape.md  F002-multi-account-keyring.md  F003-module-scope-external-integration.md  F004-shared-notion-client.md  F005-default-provider-local.md  F006-ci-release-github-only.md  F007-clap-subcommand-tree.md  F008-rss-module.md  F009-performance-budget.md  F010-testing-requirements.md  K001-memory-module.md  K002-memory-graph-query.md  K003-memory-searchable.md  K004-memory-single-instance.md  L001-append-only-event-log.md  L002-calendar-window-refresh.md  L003-account-first-class-column.md  L004-timeline-provider-pull-only.md  L005-no-auto-sync.md  L006-utc-storage-local-query.md  L007-notion-ops-log.md  L008-local-provider-degraded-granularity.md  L009-best-effort-sync.md  (+38 more)
scripts/: check-doc-links.ps1  check-doc-links.sh
skills/: README.md
skills/everyday-cli/: SKILL.md
skills/everyday-cli/references/: COMMANDS.md
src/: cli.rs  config.rs  error.rs  main.rs  notion_client.rs  ops_log.rs  output.rs  search.rs
src/modules/: auth.rs  bookmark.rs  bookmark_local.rs  calendar.rs  config.rs  email.rs  email_cache.rs  email_pool.rs  fs.rs  local.rs  mod.rs  network.rs  note.rs  note_local.rs  rss.rs  rss_items.rs  search.rs  system.rs  timeline.rs  todo.rs  todo_local.rs
src/modules/bookmark/: backend.rs  local.rs  mod.rs  notion.rs
src/modules/memory/: actions.rs  mod.rs  search.rs  store.rs
src/modules/note/: backend.rs  local.rs  mod.rs  notion.rs
src/modules/timeline/: orchestrator.rs  providers.rs  store.rs
src/modules/todo/: backend.rs  local.rs  mod.rs  notion.rs
src/shared/: config.rs  error.rs  keyring_user.rs  mod.rs  notion_client.rs  output.rs
src/util/: args.rs  datetime.rs  id.rs  json_mode.rs  mod.rs  strings.rs
