[package]
name = "everyday"
version = "0.1.0"
edition = "2024"
description = "The Rust-powered hands for your AI Agent"
license = "MIT"

[[bin]]
name = "everyday"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI 解析
clap = { version = "4", features = ["derive"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 跨平台路径
dirs = "5"

# 错误处理
thiserror = "1"
anyhow = "1"

# 凭证安全（系统密钥环）
keyring = "2"

# HTTP 客户端（RSS 抓取复用）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 邮件
async-imap = "0.9"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "pool", "builder"] }
futures = "0.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
mailparse = "0.15"
rpassword = "7"
tokio-util = { version = "0.7", features = ["compat"] }

# 日历 (CalDAV) — libdav + icalendar，HTTP 走 hyper 1.x + hyper-rustls(ring) + tower-http 鉴权
libdav = "0.10"
icalendar = { version = "0.17", features = ["parser"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "webpki-tokio"] }
tower-http = { version = "0.6", features = ["auth"] }
http = "1"
http-body-util = "0.1"
roxmltree = "0.21"

# RSS
feed-rs = "2"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 表格输出
tabled = "0.15"

[dev-dependencies]
tokio-test = "0.4"
